--- a/arquitetura/directivas/pd-panel/pd-panel.html
+++ b/arquitetura/directivas/pd-panel/pd-panel.html
@@ -6,17 +6,9 @@
         </div>
     </div>
     <div class="panel-body">
-        <div ng-transclude="body">
-
-            <label class="control-label">teste</label>
-            <input class="form-control">
-
-        </div>
+        <div ng-transclude="body"></div>
     </div>
     <div class="panel-footer" ng-if="exibirFooter !== false">
-        <div ng-transclude="footer">
-            <label class="control-label">footer </label>
-
-        </div>
+        <div ng-transclude="footer"></div>
     </div>
 </div>
