--- a/index11-storage.html
+++ b/index11-storage.html
@@ -2,40 +2,47 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Teste</title>
 
     <!--CSS-->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap-theme.css">
     <link rel="stylesheet" href="node_modules/angular-toastr/dist/angular-toastr.css">
     <link rel="stylesheet" href="node_modules/angular-ui-grid/ui-grid.css">
+    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="node_modules/angular-material/angular-material.css">
 
+    <link rel="stylesheet" href="app/css/style.css">
+
+    <link rel="stylesheet" href="arquitetura/directivas/pd-crud/pd-crud.css">
 
     <!--SCRIPTS-->
+    <script src="node_modules/jquery/dist/jquery.js"></script>
     <script src="node_modules/angular/angular.js"></script>
-    <script src="node_modules/angular-messages/angular-messages.js"></script>
-    <script src="node_modules/angular-toastr/dist/angular-toastr.tpls.js"></script>
-    <script src="node_modules/angular-animate/angular-animate.js"></script>
-    <script src="node_modules/angular-ui-grid/ui-grid.js"></script>
     <script src="node_modules/angular-aria/angular-aria.js"></script>
+    <script src="node_modules/angular-messages/angular-messages.js"></script>
+    <script src="node_modules/angular-animate/angular-animate.js"></script>
+
     <script src="node_modules/angular-material/angular-material.js"></script>
+    <script src="node_modules/angular-toastr/dist/angular-toastr.tpls.js"></script>
+    <script src="node_modules/angular-ui-grid/ui-grid.js"></script>
     <script src="node_modules/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="node_modules/oclazyload/dist/ocLazyLoad.js"></script>
-    <script src="node_modules/angular-local-storage/src/angular-local-storage.js"></script>
+    <script src="node_modules/angular-local-storage/dist/angular-local-storage.js"></script>
 
     <script src="app/config/pd-app.js"></script>
-    <script src="arquitetura/directivas/pd-hello-world/pd-hello-word.directive.js"></script>
+
+    <script src="arquitetura/directivas/pd-hello-world/pd-hello-world.directive.js"></script>
     <script src="arquitetura/directivas/pd-input-text/pd-input-text.directive.js"></script>
     <script src="arquitetura/directivas/pd-crud/pd-crud.directive.js"></script>
     <script src="arquitetura/directivas/pd-panel/pd-panel.directive.js"></script>
     <script src="arquitetura/directivas/pd-select/pd-select.directive.js"></script>
 
     <script src="app/config/pd-rotas.config.js"></script>
-    <script src="app/controller/index-router.controller.js"></script>
-    <script src="app/controller/index8-directiva-crudo.controller.js"></script>
-    <script src="app/controller/index10-directive-select.controller.js"></script>
     <script src="app/controller/index11-storage.controller.js"></script>
+
+    <script src="app/service/alert.service.js"></script>
+    <script src="app/filter/maiusculo.filter.js"></script>
 
 
 </head>
@@ -43,10 +50,11 @@
 
 
 
-    {{vm.listaAuxiliar}} <button ng-click="vm.setarInformacoesNoStorage();">Setar informações no storage</button>
-
-
-
+    {{vm.listaAuxiliar}}
+    <button class="btn btn-default"
+            ng-click="vm.setarInformacoesNoStorage()">
+        Salvar lista no storage
+    </button>
 
 </body>
 </html>
