--- a/index12-http.html
+++ b/index12-http.html
@@ -4,45 +4,58 @@
     <meta charset="UTF-8">
     <title>Title</title>
 
-    <!--CSS-->
+    <!-- CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap-theme.css">
     <link rel="stylesheet" href="node_modules/angular-toastr/dist/angular-toastr.css">
     <link rel="stylesheet" href="node_modules/angular-ui-grid/ui-grid.css">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.css">
+    <link rel="stylesheet" href="node_modules/angular-material/angular-material.css">
+    <link rel="stylesheet" href="node_modules/angular-loading-bar/build/loading-bar.css">
     <link rel="stylesheet" href="app/css/style.css">
-    <!--SCRIPTS-->
+
+    <link rel="stylesheet" href="arquitetura/directivas/pd-crud/pd-crud.css">
+
+    <!-- SCRIPTS -->
     <script src="node_modules/jquery/dist/jquery.js"></script>
     <script src="node_modules/angular/angular.js"></script>
+    <script src="node_modules/angular-aria/angular-aria.js"></script>
     <script src="node_modules/angular-messages/angular-messages.js"></script>
-    <script src="node_modules/angular-toastr/dist/angular-toastr.tpls.js"></script>
     <script src="node_modules/angular-animate/angular-animate.js"></script>
+
+    <script src="node_modules/angular-material/angular-material.js"></script>
+    <script src="node_modules/angular-toastr/dist/angular-toastr.tpls.js"></script>
     <script src="node_modules/angular-ui-grid/ui-grid.js"></script>
+    <script src="node_modules/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="node_modules/oclazyload/dist/ocLazyLoad.js"></script>
+    <script src="node_modules/angular-local-storage/dist/angular-local-storage.js"></script>
+    <script src="node_modules/angular-loading-bar/build/loading-bar.js"></script>
 
     <script src="app/config/pd-app.js"></script>
-    <script src="app/service/alert.service.js"></script>
-    <script src="app/controller/cadastro-carro.controller.js"></script>
-    <script src="app/filter/maiusculo.filter.js"></script>
+
+    <script src="arquitetura/directivas/pd-hello-world/pd-hello-word.directive.js"></script>
+    <script src="arquitetura/directivas/pd-input-text/pd-input-text.directive.js"></script>
+    <script src="arquitetura/directivas/pd-crud/pd-crud.directive.js"></script>
+    <script src="arquitetura/directivas/pd-panel/pd-panel.directive.js"></script>
+    <script src="arquitetura/directivas/pd-select/pd-select.directive.js"></script>
+
+    <script src="app/config/pd-rotas.config.js"></script>
     <script src="app/controller/index12-http.controller.js"></script>
+    <script src="app/service/pessoa.service.js"></script>
+
+    <script src="app/service/alert.service.js"></script>
+    <script src="app/filter/maiusculo.filter.js"></script>
 
 </head>
-<body ng-app="pdApp" class="container">
-    <div ng-controller="IndexController as vm">
+<body ng-app="pdApp"
+      class="container"
+      ng-controller="IndexController as vm">
 
-        <div class="panel panel-default">
-            <div class="panel-heading">Carregar Dados http</div>
-            <div class="panel-body">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div ui-grid="vm.gridOptions"></div>
-                    </div>
-                </div>
+    <button class="btn btn-primary"
+        ng-click="vm.carregarDados()"> Carregar dados</button>
 
-                 <div class="panel-footer">
-                <button class="btn btn-primary" ng-click="carregarDados()">carregar</button>
-            </div>
-            </div>
-        </div>
+    <div ui-grid="vm.gridOptions">
     </div>
+
 </body>
 </html>
