--- a/index9-directive-panel.html
+++ b/index9-directive-panel.html
@@ -2,51 +2,156 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Teste</title>
 
     <!--CSS-->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap-theme.css">
     <link rel="stylesheet" href="node_modules/angular-toastr/dist/angular-toastr.css">
     <link rel="stylesheet" href="node_modules/angular-ui-grid/ui-grid.css">
+    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="node_modules/angular-material/angular-material.css">
 
+    <link rel="stylesheet" href="app/css/style.css">
+    <link rel="stylesheet" href="arquitetura/directivas/pd-crud/pd-crud.css">
 
     <!--SCRIPTS-->
+    <script src="node_modules/jquery/dist/jquery.js"></script>
     <script src="node_modules/angular/angular.js"></script>
-    <script src="node_modules/angular-messages/angular-messages.js"></script>
-    <script src="node_modules/angular-toastr/dist/angular-toastr.tpls.js"></script>
-    <script src="node_modules/angular-animate/angular-animate.js"></script>
-    <script src="node_modules/angular-ui-grid/ui-grid.js"></script>
     <script src="node_modules/angular-aria/angular-aria.js"></script>
+    <script src="node_modules/angular-messages/angular-messages.js"></script>
+    <script src="node_modules/angular-animate/angular-animate.js"></script>
     <script src="node_modules/angular-material/angular-material.js"></script>
+    <script src="node_modules/angular-toastr/dist/angular-toastr.tpls.js"></script>
+    <script src="node_modules/angular-ui-grid/ui-grid.js"></script>
     <script src="node_modules/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="node_modules/oclazyload/dist/ocLazyLoad.js"></script>
-
 
     <script src="app/config/pd-app.js"></script>
     <script src="arquitetura/directivas/pd-hello-world/pd-hello-word.directive.js"></script>
     <script src="arquitetura/directivas/pd-input-text/pd-input-text.directive.js"></script>
     <script src="arquitetura/directivas/pd-crud/pd-crud.directive.js"></script>
     <script src="arquitetura/directivas/pd-panel/pd-panel.directive.js"></script>
+    <script src="arquitetura/directivas/pd-select/pd-select.directive.js"></script>
     <script src="app/config/pd-rotas.config.js"></script>
+
     <script src="app/controller/index-router.controller.js"></script>
-    <script src="app/controller/index8-directiva-crudo.controller.js"></script>
+    <script src="app/controller/index8-directiva-crud.controller.js"></script>
     <script src="app/service/alert.service.js"></script>
+    <script src="app/filter/maiusculo.filter.js"></script>
 
 
 
 </head>
-<body ng-app="pdApp" class="container" ng-controller="CadastroCarroController as vm">
+<body ng-app="pdApp" class="container"
+      ng-controller="CadastroCarroController as vm">
+
+<pd-panel exibir-footer="false" class-panel="panel-danger">
+    <pd-panel-header>
+        teste
+    </pd-panel-header>
+    <pd-panel-body>
+        <div class="row">
+            <pd-select
+                    label="Sexo"
+                    colspan="3"
+                    provider="vm.sexo"
+                    ng-model="vm.entidade.sexo"
+            >
+            </pd-select>
+
+            <pd-select
+                    label="Tipo de pessoa"
+                    colspan="3"
+                    provider="vm.tipoPessoa"
+                    ng-model="vm.entidade.tipoPessoa"
+                    propriedade-valor="tipo"
+                    propriedade-descricao="nome"
+                    ng-required="true"
+            >
+            </pd-select>
+
+            {{vm.entidade}}
+        </div>
+    </pd-panel-body>
+</pd-panel>
+
+<pd-panel>
+    <pd-panel-header>
+        <i class="fa fa-edit"></i>
+        <span>Título do panel</span>
+        <button class="btn btn-info btn-xs pull-right">
+            <i class="fa fa-info-circle"></i>
+        </button>
+    </pd-panel-header>
+
+    <pd-panel-body>
+        <div class="row">
+            <pd-input-text
+                    label="Teste input"
+                    colspan="4"
+                    placeholder="Teste">
+            </pd-input-text>
+
+            <pd-input-text
+                    label="Teste input"
+                    colspan="4"
+                    placeholder="Teste">
+            </pd-input-text>
+
+            <pd-input-text
+                    label="Teste input"
+                    colspan="4"
+                    placeholder="Teste">
+            </pd-input-text>
+        </div>
+        <div class="row">
+            <pd-input-text
+                    label="Teste input"
+                    colspan="4"
+                    placeholder="Teste">
+            </pd-input-text>
+
+            <pd-input-text
+                    label="Teste input"
+                    colspan="4"
+                    placeholder="Teste">
+            </pd-input-text>
+
+            <pd-input-text
+                    label="Teste input"
+                    colspan="4"
+                    placeholder="Teste">
+            </pd-input-text>
+        </div>
+        <div class="row">
+            <pd-input-text
+                    label="Teste input"
+                    colspan="4"
+                    placeholder="Teste">
+            </pd-input-text>
+
+            <pd-input-text
+                    label="Teste input"
+                    colspan="4"
+                    placeholder="Teste">
+            </pd-input-text>
+
+            <pd-input-text
+                    label="Teste input"
+                    colspan="4"
+                    placeholder="Teste">
+            </pd-input-text>
+        </div>
+    </pd-panel-body>
 
 
-
-    <pd-panel></pd-panel>
-
-    <pd-panel></pd-panel>
-
+    <pd-panel-footer>
+        <button class="btn btn-default">Botão teste</button>
+    </pd-panel-footer>
 
 
+</pd-panel>
 
 </body>
 </html>
